--- a/xbox-test-gui/xbox-test-gui.vcxproj.filters
+++ b/xbox-test-gui/xbox-test-gui.vcxproj.filters
@@ -33,9 +33,15 @@
     <ClInclude Include="controller.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BitmapDrawer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="xbox-test-gui.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BitmapDrawer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
