--- a/gamepad-battery-splash/gamepad-battery-splash.vcxproj.filters
+++ b/gamepad-battery-splash/gamepad-battery-splash.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="xbox-test-gui.h">
+    <ClInclude Include="gamepad-battery-splash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="image-loading.hpp">
@@ -41,7 +41,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="xbox-test-gui.cpp">
+    <ClCompile Include="gamepad-battery-splash.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BitmapDrawer.cpp">
@@ -52,7 +52,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="xbox-test-gui.rc">
+    <ResourceCompile Include="gamepad-battery-splash.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
@@ -60,7 +60,7 @@
     <Image Include="small.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="xbox-test-gui.ico">
+    <Image Include="gamepad-battery-splash.ico">
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="battery.png">
